--- a/template.yaml
+++ b/template.yaml
@@ -31,6 +31,7 @@ Resources:
       Handler: lambda.pre_traffic_lambda_function
       Runtime: runtime
       Runtime: ruby2.5
+      Timeout: 900
 
 Outputs:
   RunRules:
