--- a/template.yaml
+++ b/template.yaml
@@ -11,6 +11,7 @@ Parameters:
 
 Globals:
   Function:
+    CodeUri: ./
     Timeout: 30
     MemorySize: 256
     Environment:
@@ -23,13 +24,11 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: lambda.run_rules
-      Runtime: runtime
       Runtime: ruby2.5
   PreTrafficLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
       Handler: lambda.pre_traffic_lambda_function
-      Runtime: runtime
       Runtime: ruby2.5
       Timeout: 900
 
